--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
     <description>bancoSpring</description>
     <properties>
         <java.version>17</java.version>
+
+        <sonar.organization>victorborzaquel</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
