Edit: Sonar Config

--- a/pom.xml
+++ b/pom.xml
@@ -81,11 +81,11 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
-                        <configuration>
-                            <formats>
-                                <format>XML</format>
-                            </formats>
-                        </configuration>
+<!--                        <configuration>-->
+<!--                            <formats>-->
+<!--                                <format>XML</format>-->
+<!--                            </formats>-->
+<!--                        </configuration>-->
                     </execution>
                 </executions>
             </plugin>
